deploy/webapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  namespace: minishop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
        - name: webapi
          image: minishop-webapi:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          # 1) Подтягиваем настройки из ConfigMap и Secret
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

          # 3) Ресурсы (не нули, чтобы k8s мог планировать)
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
