deploy/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: minishop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: minishop-worker:1.0
          imagePullPolicy: IfNotPresent

          # Подключаем настройки
          livenessProbe:
            exec:
              command:
                - cat
                - /proc/1/status
            initialDelaySeconds: 10
            periodSeconds: 15

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
