deploy/mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql
  namespace: minishop
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
    - name: tds
      port: 1433
      targetPort: 1433
